RESOLVED #69: Align main menu icons to the bottom of the box

--- a/src/sass/rural/_header.scss
+++ b/src/sass/rural/_header.scss
@@ -198,6 +198,7 @@
                 flex: 1 1 auto;
                 min-width: 5rem;
                 text-align: center;
+                align-content: end;
             }
 			
             .nav-item +	.nav-item {
